feat: adding a bulky multi purpose codes